Equipment: Add ch#s to sources for changeable armor descriptions

--- a/misc/equipment.html
+++ b/misc/equipment.html
@@ -9,7 +9,7 @@ sources:
     chapters: [4]
   -
     name: gml_GlobalScript_scr_armorinfo
-    chapters: [4]
+    chapters: [2, 3, 4]
   -
     name: gml_Object_obj_darkcontroller_Step_0
     chapters: [4]
