Dummy encounter: Replace <br> with span.break

--- a/misc/combat/dummy.html
+++ b/misc/combat/dummy.html
@@ -232,19 +232,19 @@ god this page is messy as hell. feel free to clean it up
 	<p>Displays after any dialogue from Ralsei, depending on what he's last asked you to try.</p>
 
 	<d-box theme="battlemenu">
-		<d-text asterisk>Let's try FIGHTing!<br>&nbsp; (<img src="{{ '/assets/images/story/battlebutton/fight.png' | relative_url }}" alt="FIGHT icon"> &nbsp; )</d-text>
+		<d-text asterisk>Let's try FIGHTing!<span class="break"></span> &nbsp; (<img src="{{ '/assets/images/story/battlebutton/fight.png' | relative_url }}" alt="FIGHT icon"> &nbsp; )</d-text>
 	</d-box>
 	<d-box theme="battlemenu">
-		<d-text asterisk>Let's try DEFENDing!<br>&nbsp; (<img src="{{ '/assets/images/story/battlebutton/defend.png' | relative_url }}" alt="DEFEND icon"> &nbsp; )</d-text>
+		<d-text asterisk>Let's try DEFENDing!<span class="break"></span> &nbsp; (<img src="{{ '/assets/images/story/battlebutton/defend.png' | relative_url }}" alt="DEFEND icon"> &nbsp; )</d-text>
 	</d-box>
 	<d-box theme="battlemenu">
-		<d-text asterisk>Let's try SPELLs!<br>&nbsp; (<img src="{{ '/assets/images/story/battlebutton/magic.png' | relative_url }}" alt="MAGIC icon"> &nbsp; )</d-text>
+		<d-text asterisk>Let's try SPELLs!<span class="break"></span> &nbsp; (<img src="{{ '/assets/images/story/battlebutton/magic.png' | relative_url }}" alt="MAGIC icon"> &nbsp; )</d-text>
 	</d-box>
 	<d-box theme="battlemenu">
-		<d-text asterisk>Let's ACT!<br>&nbsp; (<img src="{{ '/assets/images/story/battlebutton/act.png' | relative_url }}" alt="ACT icon"> &nbsp; )</d-text>
+		<d-text asterisk>Let's ACT!<span class="break"></span> &nbsp; (<img src="{{ '/assets/images/story/battlebutton/act.png' | relative_url }}" alt="ACT icon"> &nbsp; )</d-text>
 	</d-box>
 	<d-box theme="battlemenu">
-		<d-text asterisk>Let's SPARE!<br>&nbsp; (<img src="{{ '/assets/images/story/battlebutton/spare.png' | relative_url }}" alt="SPARE icon"> &nbsp; )</d-text>
+		<d-text asterisk>Let's SPARE!<span class="break"></span> &nbsp; (<img src="{{ '/assets/images/story/battlebutton/spare.png' | relative_url }}" alt="SPARE icon"> &nbsp; )</d-text>
 	</d-box>
 </section>
 
