--- a/locations/lightworld/dreemurrhallway.html
+++ b/locations/lightworld/dreemurrhallway.html
@@ -1,8 +1,8 @@
 ---
-title: Dreemurr Residence - Upstairs hallway
+title: Dreemurr residence - Upstairs hallway
 
 description: >
-  <p>Narration and dialogue for the upstairs hallway in the Dreemurr Residence.</p>
+  <p>Narration and dialogue for the upstairs hallway in the Dreemurr residence.</p>
 
 credits: >
   <p>Compiled by wovenstarlight.</p>
@@ -18,13 +18,13 @@ sources:
 see_also:
   -
     url: /locations/lightworld/krisroom
-    name: Dreemurr Residence - Kris's room
+    name: Dreemurr residence - Kris's room
   -
     url: /locations/lightworld/dreemurrdownstairs
-    name: Dreemurr Residence - Downstairs
+    name: Dreemurr residence - Downstairs
   -
     url: /locations/lightworld/dreemurrbathroom
-    name: Dreemurr Residence - Bathroom
+    name: Dreemurr residence - Bathroom
 
 close_toc: true
 
