--- a/locations/lightworld/krisroom.html
+++ b/locations/lightworld/krisroom.html
@@ -1,8 +1,8 @@
 ---
-title: Dreemurr Residence - Kris's room
+title: Dreemurr residence - Kris's room
 
 description: >
-  <p>Narration and dialogue for Kris's (and Asriel's) room in the Dreemurr Residence.</p>
+  <p>Narration and dialogue for Kris's (and Asriel's) room in the Dreemurr residence.</p>
 
 credits: >
   <p>Compiled by wovenstarlight.</p>
@@ -24,13 +24,13 @@ sources:
 see_also:
   -
     url: /locations/lightworld/dreemurrhallway
-    name: Dreemurr Residence - Upstairs hallway
+    name: Dreemurr residence - Upstairs hallway
   -
     url: /locations/lightworld/dreemurrdownstairs
-    name: Dreemurr Residence - Downstairs
+    name: Dreemurr residence - Downstairs
   -
     url: /locations/lightworld/dreemurrbathroom
-    name: Dreemurr Residence - Bathroom
+    name: Dreemurr residence - Bathroom
 
 close_toc: true
 
