--- a/locations/lightworld/dreemurrdownstairs.html
+++ b/locations/lightworld/dreemurrdownstairs.html
@@ -1,8 +1,8 @@
 ---
-title: Dreemurr Residence - Downstairs
+title: Dreemurr residence - Downstairs
 
 description: >
-  <p>Narration and dialogue for the kitchen and living room in the Dreemurr Residence.</p>
+  <p>Narration and dialogue for the kitchen and living room in the Dreemurr residence.</p>
 
 credits: >
   <p>Compiled by wovenstarlight.</p>
@@ -25,13 +25,13 @@ sources:
 see_also:
   -
     url: /locations/lightworld/krisroom
-    name: Dreemurr Residence - Kris's room
+    name: Dreemurr residence - Kris's room
   -
     url: /locations/lightworld/dreemurrhallway
-    name: Dreemurr Residence - Upstairs hallway
+    name: Dreemurr residence - Upstairs hallway
   -
     url: /locations/lightworld/dreemurrbathroom
-    name: Dreemurr Residence - Bathroom
+    name: Dreemurr residence - Bathroom
 
 close_toc: true
 ---
