Document Dreemurr front yard

--- a/locations/lightworld/dreemurrbathroom.html
+++ b/locations/lightworld/dreemurrbathroom.html
@@ -32,6 +32,9 @@ see_also:
   -
     url: /locations/lightworld/dreemurrdownstairs
     name: Dreemurr residence - Downstairs
+  -
+    url: /locations/lightworld/dreemurryard
+    name: Dreemurr residence - Front yard
 
 close_toc: true
 ---
