--- a/locations/lightworld/krisroom.html
+++ b/locations/lightworld/krisroom.html
@@ -31,6 +31,9 @@ see_also:
   -
     url: /locations/lightworld/dreemurrbathroom
     name: Dreemurr residence - Bathroom
+  -
+    url: /locations/lightworld/dreemurryard
+    name: Dreemurr residence - Front yard
 
 close_toc: true
 
