Add/Extend TOC on Dreemurr location pages

--- a/locations/lightworld/dreemurrbathroom.html
+++ b/locations/lightworld/dreemurrbathroom.html
@@ -37,6 +37,56 @@ see_also:
     name: Dreemurr residence - Front yard
 
 close_toc: true
+
+toc:
+  -
+    id: shower
+    name: Shower
+    subheadings:
+      -
+        id: showerstandard
+        name: Standard
+      -
+        id: shower2pre
+        name: End of Chapter 2, before washing your hands
+      -
+        id: shower2post
+        name: End of Chapter 2 onwards, after washing your hands
+      -
+        id: shower4
+        name: Chapter 4, when Susie is present
+  -
+    id: toilet
+    name: Toilet
+    subheadings:
+      -
+        id: toiletstandard
+        name: Standard
+      -
+        id: toilet2pre
+        name: End of Chapter 2, before washing your hands
+      -
+        id: toilet4
+        name: Chapter 4, when Susie is present
+  -
+    id: sink
+    name: Sink
+    subheadings:
+      -
+        id: sink1
+        name: Chapter 1
+      -
+        id: sink2start
+        name: Start of Chapter 2
+      -
+        id: sink2pre
+        name: End of Chapter 2, before washing your hands
+      -
+        id: sink2post
+        name: End of Chapter 2 onwards, after washing your hands
+      -
+        id: sink4
+        name: Chapter 4, when Susie is present
 ---
 <section class="d-section" id="shower">
 	<h2>Shower</h2>
