--- a/locations/lightworld/dreemurrdownstairs.html
+++ b/locations/lightworld/dreemurrdownstairs.html
@@ -37,6 +37,134 @@ see_also:
     name: Dreemurr residence - Front yard
 
 close_toc: true
+
+toc:
+  -
+    id: bathroomdoor
+    name: Bathroom door
+    subheadings:
+      -
+        id: bathroomdoor4start
+        name: Start of Chapter 4, before going to Church
+      -
+        id: bathroomdoor4end
+        name: End of Chapter 4
+  -
+    id: fridge
+    name: Fridge
+    subheadings:
+      -
+        id: fridgestandard
+        name: Standard
+      -
+        id: fridge4susie
+        name: Chapter 4, when Susie is present
+      -
+        id: fridge4end
+        name: End of Chapter 4
+  -
+    id: sink
+    name: Sink
+    subheadings:
+      -
+        id: sinkstandard
+        name: Standard
+      -
+        id: sink2end
+        name: End of Chapter 2
+      -
+        id: sink4susie
+        name: Chapter 4, when Susie is present
+      -
+        id: sink4end
+        name: End of Chapter 4
+  -
+    id: stove
+    name: Stove
+    subheadings:
+      -
+        id: stovestandard
+        name: Standard
+      -
+        id: stove1end
+        name: End of Chapter 1
+  -
+    id: counter
+    name: Counter with microwave
+    subheadings:
+      -
+        id: counterstandard
+        name: Standard
+      -
+        id: counter4end
+        name: End of Chapter 4
+  -
+    id: trashcan
+    name: Trashcan
+    subheadings:
+      -
+        id: trashcan1
+        name: Chapter 1 & 2
+      -
+        id: trashcan4
+        name: Chapter 4
+  -
+    id: diningtable
+    name: Dining table
+  -
+    id: phone
+    name: Phone
+  -
+    id: chairiel
+    name: Chairiel
+    subheadings:
+      -
+        id: chairielstandard
+        name: Standard
+      -
+        id: chairiel1end
+        name: End of Chapter 1
+      -
+        id: chairiel4start
+        name: Start of Chapter 4, after Susie joins you and before church
+      -
+        id: chairiel4postchurch
+        name: Start of Chapter 4, after church
+      -
+        id: chairiel4end
+        name: End of Chapter 4
+  -
+    id: tv
+    name: TV
+    subheadings:
+      -
+        id: tv1
+        name: Chapter 1
+      -
+        id: tv2
+        name: Chapter 2
+      -
+        id: tv4start
+        name: Start of Chapter 4
+      -
+        id: tv4end
+        name: After taking Tenna to Castle Town/Mettaton, or end of Chapter 4
+  -
+    id: rightchair
+    name: Right chair
+  -
+    id: book
+    name: Book of hymns
+  -
+    id: frontdoor
+    name: Front door
+    subheadings:
+      -
+        id: frontdoor4start
+        name: Start of Chapter 4
+      -
+        id: frontdoor4end
+        name: End of Chapter 4
 ---
 <section class="d-section" id="bathroomdoor">
 	<h2>Bathroom door</h2>
@@ -675,14 +803,14 @@ close_toc: true
 <section class="d-section" id="frontdoor">
 	<h2>Front door</h2>
 
-	<h3>Start of Chapter 4</h3>
+	<h3 id="frontdoor4start">Start of Chapter 4</h3>
 	<d-box theme="light">
 		<d-text asterisk>(The door is sealed by the power of breakfast.)</d-text>
 	</d-box>
 
 	<hr>
 
-	<h3>End of Chapter 4</h3>
+	<h3 id="frontdoor4end">End of Chapter 4</h3>
 	<d-box theme="light">
 		<d-text asterisk>(... You should probably just go to bed.)</d-text>
 	</d-box>
