--- a/locations/lightworld/dreemurrhallway.html
+++ b/locations/lightworld/dreemurrhallway.html
@@ -33,23 +33,61 @@ close_toc: true
 
 toc:
   -
-    id: torielroom
-    name: Toriel's room
+    id: torieldoor
+    name: Toriel's door
+    subheadings:
   -
     id: mirror
     name: Mirror
+    subheadings:
+      -
+        id: mirror1
+        name: Chapter 1
+      -
+        id: mirror2
+        name: Chapter 2 onwards
+      -
+        id: mirror4susie
+        name: Chapter 4, when Susie is present
   -
     id: sideboard
     name: Sideboard
+    subheadings:
+      -
+        id: sideboard1
+        name: Chapter 1
+      -
+        id: sideboard2
+        name: Chapter 2 onwards
+      -
+        id: sideboard4susie
+        name: Chapter 4, when Susie is present
   -
     id: cactus
     name: Cactus
+    subheadings:
+      -
+        id: cactusstandard
+        name: Chapter 1 & 2
+      -
+        id: cactus4
+        name: Chapter 4
   -
     id: bookshelf
     name: Bookshelf
+    subheadings:
+      -
+        id: bookshelf1
+        name: Chapter 1
+      -
+        id: bookshelf2
+        name: Chapter 2
+      -
+        id: bookshelf4
+        name: Chapter 4
 ---
-<section class="d-section" id="torielroom">
-	<h2>Toriel's room</h2>
+<section class="d-section" id="torieldoor">
+	<h2>Toriel's door</h2>
 
 	<d-box theme="light">
 		<d-text asterisk>The door is locked.</d-text>
