--- a/locations/lightworld/dreemurryard.html
+++ b/locations/lightworld/dreemurryard.html
@@ -32,6 +32,25 @@ see_also:
     name: Dreemurr residence - Bathroom
 
 close_toc: true
+
+toc:
+  -
+    id: frontdoor
+    name: Front door
+    subheadings:
+      -
+        id: frontdoor4start
+        name: Start of Chapter 4, after church
+  -
+    id: van
+    name: Van
+    subheadings:
+      -
+        id: vanstandard
+        name: Standard
+      -
+        id: van4start
+        name: Start of Chapter 4, when Susie is present
 ---
 <section class="d-section" id="frontdoor">
 	<h2>Front door</h2>
