LW items: Clarify rare drop text chance

--- a/misc/lightitems.html
+++ b/misc/lightitems.html
@@ -126,7 +126,7 @@ toc:
 	</d-box>
 
 	<h4>Rare messages</h4>
-	<p>There is a 4 in 30 chance that the normal drop text will be overridden by one of the following messages:</p>
+	<p>Each of the following messages has a 1 in 30 chance to override the normal drop text.</p>
 
 	<d-box theme="light">
 		<d-text asterisk>You bid a quiet farewell to the [ITEM].</d-text>
