Dreemurr TV: Correct conditions for Tenna breakage

--- a/locations/lightworld/dreemurrdownstairs.html
+++ b/locations/lightworld/dreemurrdownstairs.html
@@ -674,7 +674,7 @@ toc:
 	<hr>
 
 	<h3 id="tv4start">Start of Chapter 4</h3>
-	<h4>If you recruited all TV World Darkners</h4>
+	<h4>If you didn't defeat any TV World Darkners violently, and recruited both Shadowguy and Pippins</h4>
 	<d-box theme="light">
 		<d-text asterisk>(It's a TV. Its antenna was broken, but it's been taped up.)</d-text>
 	</d-box>
@@ -708,7 +708,7 @@ toc:
 		<d-text asterisk>(Let's find a new home for him fast, OK, Kris?)</d-text>
 	</d-box>
 
-	<h4>If you didn't recruit all TV World Darkners</h4>
+	<h4>If any TV World Darkners were defeated violently</h4>
 	<h5>First time</h5>
 	<d-box theme="light">
 		<d-sprite speaker="Susie" emotion="D"></d-sprite>
