Reorder LW locations, add indexes
Placed related locations together - all Dreemurr residence subpages are now in a dedicated folder, same for school pages.

Added a LW index page that links to each sublocation; also added redirects to the folders.

--- a/locations/lightworld/dreemurrresidence/hallway.html
+++ b/locations/lightworld/dreemurrresidence/hallway.html
@@ -17,17 +17,8 @@ sources:
 
 see_also:
   -
-    url: /locations/lightworld/krisroom
-    name: Dreemurr residence - Kris's room
-  -
-    url: /locations/lightworld/dreemurrdownstairs
-    name: Dreemurr residence - Downstairs
-  -
-    url: /locations/lightworld/dreemurrbathroom
-    name: Dreemurr residence - Bathroom
-  -
-    url: /locations/lightworld/dreemurryard
-    name: Dreemurr residence - Front yard
+    url: /locations/lightworld#dreemurrresidence
+    name: Sublocations within the Dreemurr residence
 
 close_toc: true
 
