--- a/locations/lightworld/dreemurrresidence/yard.html
+++ b/locations/lightworld/dreemurrresidence/yard.html
@@ -19,19 +19,8 @@ sources:
 
 see_also:
   -
-    url: /locations/lightworld/krisroom
-    name: Dreemurr residence - Kris's room
-  -
-    url: /locations/lightworld/dreemurrhallway
-    name: Dreemurr residence - Upstairs hallway
-  -
-    url: /locations/lightworld/dreemurrdownstairs
-    name: Dreemurr residence - Downstairs
-  -
-    url: /locations/lightworld/dreemurrbathroom
-    name: Dreemurr residence - Bathroom
-
-close_toc: true
+    url: /locations/lightworld#dreemurrresidence
+    name: Sublocations within the Dreemurr residence
 
 toc:
   -
