--- a/locations/lightworld/school/alphysclass.html
+++ b/locations/lightworld/school/alphysclass.html
@@ -12,6 +12,11 @@ sources:
     name: gml_Object_obj_readable_room1_Other_10
     chapters: [1, 2, 4]
 
+see_also:
+  -
+    url: /locations/lightworld#school
+    name: Sublocations within the Hometown school
+
 toc:
   -
     id: clock
@@ -180,7 +185,7 @@ toc:
 
 <section class="d-section" id="eggs">
 	<h2>Eggs</h2>
-	<p>Present only in Chapter 4. On Berdly's desk sits at least one egg, joined by any more <a href="{{ '/misc/darkitems' | relative_url }}">Eggs</a> you've obtained during your journey.</p>
+	<p>Present only in Chapter 4. On Berdly's desk sits at least one egg, joined by any more <a href="{{ '/misc/darkitems#egg' | relative_url }}">Eggs</a> you've obtained during your journey.</p>
 
 	<h3 id="eggfirst">First time</h3>
 	<d-box theme="light">
