--- a/locations/lightworld/school/torielclass.html
+++ b/locations/lightworld/school/torielclass.html
@@ -15,6 +15,11 @@ sources:
     name: gml_GlobalScript_scr_text
     chapters: [1, 2, 4]
 
+see_also:
+  -
+    url: /locations/lightworld#school
+    name: Sublocations within the Hometown school
+
 toc:
   -
     id: whiteboard
