--- a/locations/lightworld/dreemurrresidence/bathroom.html
+++ b/locations/lightworld/dreemurrresidence/bathroom.html
@@ -24,17 +24,8 @@ sources:
 
 see_also:
   -
-    url: /locations/lightworld/krisroom
-    name: Dreemurr residence - Kris's room
-  -
-    url: /locations/lightworld/dreemurrhallway
-    name: Dreemurr residence - Upstairs hallway
-  -
-    url: /locations/lightworld/dreemurrdownstairs
-    name: Dreemurr residence - Downstairs
-  -
-    url: /locations/lightworld/dreemurryard
-    name: Dreemurr residence - Front yard
+    url: /locations/lightworld#dreemurrresidence
+    name: Sublocations within the Dreemurr residence
 
 close_toc: true
 
