--- a/locations/lightworld/dreemurrresidence/downstairs.html
+++ b/locations/lightworld/dreemurrresidence/downstairs.html
@@ -20,21 +20,12 @@ sources:
   -
     name: gml_Object_obj_ch4_PDC01B_Step_0
     chapters: [4]
-    note: Ch4 intro skip
+    note: intro skip
 
 see_also:
   -
-    url: /locations/lightworld/krisroom
-    name: Dreemurr residence - Kris's room
-  -
-    url: /locations/lightworld/dreemurrhallway
-    name: Dreemurr residence - Upstairs hallway
-  -
-    url: /locations/lightworld/dreemurrbathroom
-    name: Dreemurr residence - Bathroom
-  -
-    url: /locations/lightworld/dreemurryard
-    name: Dreemurr residence - Front yard
+    url: /locations/lightworld#dreemurrresidence
+    name: Sublocations within the Dreemurr residence
 
 close_toc: true
 
