--- a/locations/lightworld/dreemurrresidence/krisroom.html
+++ b/locations/lightworld/dreemurrresidence/krisroom.html
@@ -23,17 +23,8 @@ sources:
 
 see_also:
   -
-    url: /locations/lightworld/dreemurrhallway
-    name: Dreemurr residence - Upstairs hallway
-  -
-    url: /locations/lightworld/dreemurrdownstairs
-    name: Dreemurr residence - Downstairs
-  -
-    url: /locations/lightworld/dreemurrbathroom
-    name: Dreemurr residence - Bathroom
-  -
-    url: /locations/lightworld/dreemurryard
-    name: Dreemurr residence - Front yard
+    url: /locations/lightworld#dreemurrresidence
+    name: Sublocations within the Dreemurr residence
 
 close_toc: true
 
