Unused class: Add src for availability

--- a/locations/lightworld/school/unusedclass.html
+++ b/locations/lightworld/school/unusedclass.html
@@ -11,6 +11,10 @@ sources:
   -
     name: gml_Object_obj_readable_room1_Other_10
     chapters: [1, 2]
+  -
+    name: gml_Object_obj_unusedclassevent_Create_0
+    chapters: [2]
+    note: object availability
 
 see_also:
   -
