Correct link to UNUSED from misc index

--- a/misc/index.html
+++ b/misc/index.html
@@ -50,7 +50,7 @@ toc:
 	<h2>Other</h2>
 
 	<ul>
-		<li><a href="{{ '/misc/unusedtext' | relative_url }}">Unused text</a> found in the game files</li>
+		<li><a href="{{ '/misc/unused' | relative_url }}">UNUSED</a> - Text found in the game files</li>
 	</ul>
 </section>
 
